@@ -1,6 +1,8 @@
 Giraph Change Log
 
 Release 1.2.0 - unreleased
+  GIRAPH-1004: Allow changing hadoop output format (majakabiljo)
+
   GIRAPH-1002: Improve message changing through iters (ikabiljo via edunov)
 
   GIRAPH-998: Close writers in parallel (majaakbiljo)
